storage/innobase/trx/trx0purge.cc
@@ -522,10 +522,11 @@ __attribute__((optimize(0)))
 # endif
 #endif
 /**
-Removes unnecessary history data from rollback segments. NOTE that when this
-function is called, the caller must not have any latches on undo log pages!
+Remove unnecessary history data from rollback segments. NOTE that when this
+function is called, the caller (purge_coordinator_callback)
+must not have any latches on undo log pages!
 */
-static void trx_purge_truncate_history()
+void trx_purge_truncate_history()
 {
   ut_ad(purge_sys.head <= purge_sys.tail);
   purge_sys_t::iterator &head= purge_sys.head.trx_no
@@ -618,7 +619,7 @@ static void trx_purge_truncate_history()
       for (const trx_undo_t *undo= UT_LIST_GET_FIRST(rseg->undo_cached); undo;
            undo= UT_LIST_GET_NEXT(undo_list, undo))
       {
-        if (head.trx_no < undo->trx_id)
+        if (head.trx_no && head.trx_no < undo->trx_id)
           goto not_free;
         else
           cached+= undo->size;
@@ -731,7 +732,7 @@ static void trx_purge_truncate_history()
       ut_ad(rseg->id == i);
       ut_ad(rseg->is_persistent());
       ut_ad(!rseg->trx_ref_count);
-      ut_ad(rseg->needs_purge <= head.trx_no);
+      ut_ad(!head.trx_no || rseg->needs_purge <= head.trx_no);
       ut_d(const auto old_page= rseg->page_no);
 
       buf_block_t *rblock= trx_rseg_header_create(&space, i,
@@ -1235,9 +1236,8 @@ static void trx_purge_wait_for_workers_to_complete()
 /**
 Run a purge batch.
 @param n_tasks   number of purge tasks to submit to the queue
-@param truncate  whether to truncate the history at the end of the batch
 @return number of undo log pages handled in the batch */
-ulint trx_purge(ulint n_tasks, bool truncate)
+ulint trx_purge(ulint n_tasks)
 {
 	que_thr_t*	thr = NULL;
 	ulint		n_pages_handled;
@@ -1270,10 +1270,6 @@ ulint trx_purge(ulint n_tasks, bool truncate)
 	que_run_threads(thr);
 
 	trx_purge_wait_for_workers_to_complete();
-
-	if (truncate) {
-		trx_purge_truncate_history();
-	}
 
 	MONITOR_INC_VALUE(MONITOR_PURGE_INVOKED, 1);
 	MONITOR_INC_VALUE(MONITOR_PURGE_N_PAGE_HANDLED, n_pages_handled);
